TF3-VPC-EC2-NAT-ELB(Nginx)/internet_gateway.tf
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/internet_gateway
resource "aws_internet_gateway" "gw" {
vpc_id = aws_vpc.main.id

tags = {
Name = "TF Internet Gateway"
}
}
